--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -72,8 +72,8 @@
           <div class="about-content">
             <p>
               Software Engineer at Alshaya Group with 1+ years of experience in
-              Oracle Forms, PL/SQL, and SQL. Specialized in enterprise resource
-              planning systems and supply chain applications (AIMS).
+              PL/SQL, and SQL. Specialized in enterprise resource planning
+              systems and supply chain applications (AIMS).
             </p>
             <p>
               Passionate about transitioning to modern cloud data platforms like
