--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="skill-card">
               <div class="skill-icon">🗄️</div>
               <h3>Oracle Database</h3>
-              <p>Forms & Administration</p>
+              <p>Administration</p>
             </div>
             <div class="skill-card">
               <div class="skill-icon">⚙️</div>
