--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
               <p>Stored Procedures</p>
             </div>
             <div class="skill-card">
-              <div class="skill-icon">📊</div>
+              <div class="skill-icon">🛢️</div>
               <h3>SQL</h3>
               <p>Query Optimization</p>
             </div>
             <div class="skill-card">
-              <div class="skill-icon">📦</div>
+              <div class="skill-icon">🛡️</div>
               <h3>HTML5</h3>
               <p>Semantic markup</p>
             </div>
