--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <p>Stored Procedures</p>
             </div>
             <div class="skill-card">
-              <div class="skill-icon">🛢️</div>
+              <div class="skill-icon">📑</div>
               <h3>SQL</h3>
               <p>Query Optimization</p>
             </div>
